tests/name_resolution/modules-second-class.stderr
error[E023]: module used as if it was a value
 --> ${DIRECTORY}/name_resolution/modules-second-class.lushui:5:14
  |
5 | r0: RECORD = am-i-a-record
  |              ^^^^^^^^^^^^^ 
  |
 help: modules are not first-class citizens, consider utilizing records for such cases instead

error[E023]: module used as if it was a value
  --> ${DIRECTORY}/name_resolution/modules-second-class.lushui:11:28
   |
11 | r1: RECORD = am-i-a-record.am-i-a-record-too
   |                            ^^^^^^^^^^^^^^^^^ 
   |
  help: modules are not first-class citizens, consider utilizing records for such cases instead

error[E021]: binding `ANOTHER-RECORD` is not defined in this scope
  --> ${DIRECTORY}/name_resolution/modules-second-class.lushui:15:5
   |
15 | r2: ANOTHER-RECORD = am-i-a-record-too
   |     ^^^^^^^^^^^^^^ 
   |

error[E023]: module used as if it was a value
  --> ${DIRECTORY}/name_resolution/modules-second-class.lushui:15:22
   |
15 | r2: ANOTHER-RECORD = am-i-a-record-too
   |                      ^^^^^^^^^^^^^^^^^ 
   |
  help: modules are not first-class citizens, consider utilizing records for such cases instead

error: aborting due to 4 previous errors

